# simple-rtsp-server

./: CMakeLists.txt  cross.cmake  rtsp_server.c
camera_rtsp/: CMakeLists.txt  ffh264.cc  ffh2642.cc  h264test.cc  main.cc  simple-rtsp-camera.cc  simple-rtsp.cc
demo_external/: CMakeLists.txt  Makefile  init.sh  rtsps_demo  rtsps_demo_7v  rtsps_demo_external  rtsps_demo_huanshi  rwdir  start.sh  test.json
demo_external/cfg/: cim_config.json  hb_j5dev.json  hb_mipi_ar0147_yuv422_30fps_720P.json  vpm_config.json
demo_external/include/: cPush.h  j5_cam.h  j5_codec.h  mux_common_type.h  rtppay.h  rtsps_server_api.h
demo_external/src/: cPush.cpp  j5_cam.cpp  j5_codec.cpp  main.cpp
